--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "~4.16.1",
     "glob": "^7.1.6",
     "http-errors": "~1.6.3",
+    "log4js": "^6.3.0",
     "morgan": "~1.9.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
